--- a/client/src/components/Profile/style.css
+++ b/client/src/components/Profile/style.css
@@ -1,3 +1,5 @@
-
-
+.alignLeft {
+    text-align: left;
+    color: white;
+}
 
