--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,33 @@
-html {
+/* html { */
   /* min-height: 100%; */
-}
+/* } */
 
 h1 {
   /* font-family: 'Amatic SC', cursive; */
+  /* font-family: 'Permanent Marker', cursive; */
+  /* font-size: 4em; */
+  /* color: white; */
 }
 
+.amaticGoogleFont {
+  font-family: 'Amatic SC', cursive;
+  /* font-family: 'Permanent Marker', cursive; */
+  font-size: 4em;
+  /* color: white; */
+}
+
+html,
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  /* min-height: 100%; */
+  height: 100%;
+  position: relative;
 }
 
 p {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
+  /* color: white; */
   /* font-family: 'Amatic SC', cursive;
   font-size: 2em; */
 }
