--- a/client/src/pages/CreatePost/style.css
+++ b/client/src/pages/CreatePost/style.css
@@ -9,4 +9,6 @@
 
 .alignTextLeft {
     text-align: left;
+    margin-top: 1em;
+    color: white;
 }
